Fri Aug  9 08:28:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3769_Regression/Foo.idl:
        * tests/Bug_3769_Regression/Foo_exec.h:
        * tests/Bug_3769_Regression/Foo_exec.cpp:
        * tests/Bug_3769_Regression/descriptors/DeploymentPlan.cdp:
          Further extensions, test whether the default value of all
          numeric fields works when they just use <value/> in the cdp

Wed Aug  7 09:340:27 UTC 2013  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        *  connectors/dds4ccm/examples/ShapesContr/descriptors/USER_QOS_PROFILES.xml:
        Qos file, needed if not using OPEN DDS .

Tue Aug  6 08:00:27 UTC 2013  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        *  connectors/dds4ccm/examples/ShapesContr/Controller/Shapes_Controller.mpc:
        *  connectors/dds4ccm/examples/ShapesContr/Controller/Shapes_Controller_exec.cpp:
        *  connectors/dds4ccm/examples/ShapesContr/Controller/Shapes_Controller_exec.h:
        Missing files for test.

Mon Aug  5 10:20:27 UTC 2013  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        *  connectors/dds4ccm/examples/ShapesContr:
        *  connectors/dds4ccm/examples/ShapesContr/Connector:
        *  connectors/dds4ccm/examples/ShapesContr/Connector/Shapes_Connector.mpc:
        *  connectors/dds4ccm/examples/ShapesContr/Connector/Shapes_Connector.idl:
        *  connectors/dds4ccm/examples/ShapesContr/Base:
        *  connectors/dds4ccm/examples/ShapesContr/Base/Shapes_Contr_Base.idl:
        *  connectors/dds4ccm/examples/ShapesContr/Base/Shapes_Base.mpc:
        *  connectors/dds4ccm/examples/ShapesContr/Base/Shapes_Base.idl:
        *  connectors/dds4ccm/examples/ShapesContr/README:
        *  connectors/dds4ccm/examples/ShapesContr/Sender:
        *  connectors/dds4ccm/examples/ShapesContr/Sender/Shapes_Sender_exec.h:
        *  connectors/dds4ccm/examples/ShapesContr/Sender/Shapes_Sender.mpc: