@@ -1,3 +1,9 @@
+Fri Aug  9 16:57:32 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/DAnCE/LocalityManager/CPUAffinity/CPUAffinity_exec.cpp:
+          Use ACE_HAS_SCHED_GETAFFINITY instead of checking the
+          linux kernel version here
+
 Fri Aug  9 08:28:27 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/Bug_3769_Regression/Foo.idl:
